--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -1,6 +1,3 @@
---- 
----
-
 /*!
  * Start Bootstrap - Grayscale Bootstrap Theme (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
@@ -158,7 +155,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: /*url(/img/building-wallpapers-28464-2708651.jpg)*/ {{ site.background.intro-bkg }} no-repeat bottom -100px center scroll;
+    background: /*url(/img/building-wallpapers-28464-2708651.jpg)*/ url({{site.background.intro-bkg}}) no-repeat bottom -100px center scroll;
     background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
     -moz-background-size: cover;
