--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -14,7 +14,7 @@
     </section>
     {% include download.html %}
     {% include contact.html %}
-    <!--{% include map.html %}-->
+    {% include map.html %}
     {% include footer.html %}
     {% include js.html %}
     </body>
