--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,5 +1,9 @@
     <!-- Map Section -->
-    <div id="map">
-                <h2>{{ site.content-set.map.title }}</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.863896249742!2d-49.202003184986275!3d-25.40936608379801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf3b4165020720b8f!2sUnna+Engenharia+e+Constru%C3%A7%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1556827372982!5m2!1spt-BR!2sbr" width="1500" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
+<section id="map" class="container content-section text-center">
+        <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                        <h2>{{ site.content-set.map.title }}</h2>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.863896249742!2d-49.202003184986275!3d-25.40936608379801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf3b4165020720b8f!2sUnna+Engenharia+e+Constru%C3%A7%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1556827372982!5m2!1spt-BR!2sbr" width="1500" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
+        </div>
+</section>
