--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,6 +28,9 @@
                     <li>
                         <a class="page-scroll" href="#contato">Contato</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="#map">Onde estamos</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
