Configiração do site. 5x1. Demais ajustes

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,7 +1,13 @@
 <!-- Map Section -->
-<div id="map" class="text-center">                
-        <h2>{{ site.content-set.map.title }}</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.863896249742!2d-49.202003184986275!3d-25.40936608379801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf3b4165020720b8f!2sUnna+Engenharia+e+Constru%C3%A7%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1556827372982!5m2!1spt-BR!2sbr" width="1500" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+<section class="map-section">
+<h2 class="text-center">{{ site.content-set.map.title }}</h2>         
+<div id="map" class="embed-responsive embed-responsive-5by1">                
+       
+        <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.863896249742!2d-49.202003184986275!3d-25.40936608379801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf3b4165020720b8f!2sUnna+Engenharia+e+Constru%C3%A7%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1556827372982!5m2!1spt-BR!2sbr" width="1200" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
-        
+</section>
 
+<!-- 16:9 aspect ratio -->
+
+              
+              
