--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -33,6 +33,11 @@ html {
     color: {{ site.font-intro-color }};
 }
 
+.map-section{
+    margin-top: 150px;
+}
+
+
 h1,
 h2,
 h3,
@@ -284,7 +289,7 @@ a:focus {
 #map {
     width: 100%;
     height: 200px;
-    margin-top: 100px;
+    margin-top: 25px;
 }
 
 @media(min-width:767px) {
@@ -298,7 +303,7 @@ a:focus {
 
     #map {
         height: 400px;
-        margin-top: 250px;
+        margin-top: 25px;
     }
 }
 
