--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,6 +31,9 @@
                     <li>
                         <a class="page-scroll" href="#map">Onde estamos</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="#map">Postagens</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
