--- a/_includes/css/unna.css
+++ b/_includes/css/unna.css
@@ -37,6 +37,16 @@ html {
     margin-top: 150px;
 }
 
+.color-green{
+    background-color: #059C00;
+    width: 100%;
+    margin-top: 90px;
+}
+
+.color-white{
+    color:#FFF;
+}
+
 
 h1,
 h2,
