--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,19 +20,19 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#servicos">Serviços</a>
+                        <a class="page-scroll" href="{{ site.baseurl }}/#servicos">Serviços</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#sobre-nos">Sobre Nós</a>
+                        <a class="page-scroll" href="{{ site.baseurl }}/#sobre-nos">Sobre Nós</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contato">Contato</a>
+                        <a class="page-scroll" href="{{ site.baseurl }}/#contato">Contato</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#map">Onde estamos</a>
+                        <a class="page-scroll" href="{{ site.baseurl }}/#map">Onde estamos</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#map">Postagens</a>
+                        <a class="page-scroll" href="{{ site.baseurl }}/view-posts">Postagens</a>
                     </li>
                 </ul>
             </div>
