--- a/_includes/above-post.html
+++ b/_includes/above-post.html
@@ -1,8 +1,8 @@
     <!-- Above posts -->
-    <section class="container content-section text-center color-green">
+    <section class="container ccontent-section-posts text-center color-above-posts">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 ">
-                <h2 class="white-color">{{ page.title }}</h2>
+                <h2>{{ page.title }}</h2>
             </div>
         </div>
     </section>
