--- a/_includes/post.html
+++ b/_includes/post.html
@@ -4,7 +4,7 @@
         <p class="lead text-info">
           {{ page.date | date: "%b %-d, %Y" }}
         </p>
-        <h1>{{ page.title }}</h1>
+        <h1>{{ post.title }}</h1>
         <article>
           {{ content }}
         </article>
