--- a/_layouts/version.html
+++ b/_layouts/version.html
@@ -3,6 +3,7 @@
     {% include head.html %}
     <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     {% include nav.html %}
+    {% include above-post.html %}
     {% include version.html %}
     {% include footer.html %}
     {% include js.html %}
