--- a/_includes/css/unna.css
+++ b/_includes/css/unna.css
@@ -4,7 +4,7 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
-body {
+ body {
     width: 100%;
     height: 100%;
     font-family: {{ site.fontFamily.font-family }}; /* Lora,"Helvetica Neue",Helvetica,Arial,sans-serif; */
@@ -20,6 +20,15 @@ footer {
     background-color: {{ site.color.footer-bkg }};
 }
 
+.color-above-posts{
+    background-color: #B20000;    
+    width: 100%;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    padding-top: 30px;
+    color: white;
+}
+
 .text-copyright{
     color: #fff;
 }
@@ -31,28 +40,7 @@ html {
 
 .intro-text{
     color: {{ site.font-intro-color }};
-}
-
-.map-section{
-    margin-top: 150px;
-}
-
-.color-above-posts{
-    background-color: #B20000;    
-    width: 100%;
-    margin-top: 100px;
-    margin-bottom: 50px;
-    padding-top: 25px;
-    color: white;
-}
-
-a {
-    color: #3c763d;
-    text-decoration: none;
-}
-
-.text-info {
-    color: #B20000;
+    padding-top: 100px;
 }
 
 h1,
@@ -62,7 +50,7 @@ h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    text-transform: none;
+    text-transform: uppercase;
     font-family: {{ site.fontFamily.font-family }}; /*Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
     font-weight: 700;
     letter-spacing: 1px;
@@ -177,7 +165,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: /*url(/img/building-wallpapers-28464-2708651.jpg)*/ url({{site.baseurl}}{{site.background.intro-bkg}}) no-repeat bottom -100px center scroll;
+    background: url(/img/building-wallpapers-28464-2708651.jpg) no-repeat bottom -100px center scroll;
     background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -196,7 +184,6 @@ a:focus {
 
 .intro .intro-body .intro-text {
     font-size: 18px;
-    margin-top: 150px;
 }
 
 @media(min-width:767px) {
@@ -289,7 +276,7 @@ a:focus {
 }
 
 .content-section {
-    padding-top: 30px;
+    padding-top: 100px;
 }
 
 .download-section {         /*seção equipe*/
@@ -307,17 +294,12 @@ a:focus {
 #map {
     width: 100%;
     height: 200px;
-    margin-top: 25px;
+    margin-top: 100px;
 }
 
 @media(min-width:767px) {
     .content-section {
         padding-top: 200px;
-    }
-
-@media(min-width:767px) {
-    .content-section-posts {
-            padding-top: 30px;
     }
 
     .download-section {
@@ -326,12 +308,12 @@ a:focus {
 
     #map {
         height: 400px;
-        margin-top: 25px;
+        margin-top: 250px;
     }
 }
 
 .btn {
-    text-transform: lowercase;
+    text-transform: uppercase;
     font-family: {{ site.fontFamily.font-family }} /*Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
     font-weight: 400;
     -webkit-transition: all .3s ease-in-out;
