--- a/_includes/above-post.html
+++ b/_includes/above-post.html
@@ -2,7 +2,7 @@
     <section class="container ccontent-section-posts text-center color-above-posts">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 ">
-                <h2>{{ page.title }}</h2>
+                <h2 class="none-text">{{ page.title }}</h2>
             </div>
         </div>
     </section>
