--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
+                <a class="navbar-brand page-scroll" href="{{ site.baseurl }}/#page-top">
                     <img src="{{ site.baseurl }}/img/logo-unna2.png" >
                 
                 <!-- <i class="fa fa-play-circle"></i>  <span class="light">Start</span> Bootstrap -->
@@ -32,7 +32,7 @@
                         <a class="page-scroll" href="{{ site.baseurl }}/#map">Onde estamos</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{ site.baseurl }}/view-posts">Postagens</a>
+                        <a class="page-scroll" href="{{ site.baseurl }}/view-posts">Atualizações</a>
                     </li>
                 </ul>
             </div>
