--- a/_includes/post.html
+++ b/_includes/post.html
@@ -2,7 +2,8 @@
     <div class="row">
       <div class="col">
         <p class="lead text-info">
-          {{ page.date | date: "%b %-d, %Y" }}
+          {% include pgdate.html %}
+          <!-- {{ page.date | date: "%b %-d, %Y" }} -->
         </p>
         <h1>{{ post.title }}</h1>
         <article>
