--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@
     {% include nav.html %}
     {% include above-post.html %}
     {% include post.html %}
+    {% include comments.html %}
     {% include footer.html %}
     {% include js.html %}
     </body>
