--- a/_includes/post.html
+++ b/_includes/post.html
@@ -2,8 +2,7 @@
     <div class="row">
       <div class="col">
         <p class="lead text-info">
-          {% include pgdate.html %}
-          <!-- {{ page.date | date: "%b %-d, %Y" }} -->
+          {% include page-date.html %}
         </p>
         <h1>{{ post.title }}</h1>
         <article>
