--- a/_includes/page-date.html
+++ b/_includes/page-date.html
@@ -1,5 +1,6 @@
-{% assign m = post.date | date: "%-m" %}
-{{ post.date | date: "%-d" }}
+{% assign m = page.date | date: "%-m" %}
+{{ page.date | date: "%-d" }}
+{{ "de" }}
 {% case m %}
   {% when '1' %}Janeiro
   {% when '2' %}Fevereiro 
@@ -14,4 +15,4 @@
   {% when '11' %}Novembro
   {% when '12' %}Dezembro
 {% endcase %}
-{{ "de" }} {{ post.date | date: "%Y" }}
+{{ "de" }} {{ page.date | date: "%Y" }}
