--- a/_includes/version.html
+++ b/_includes/version.html
@@ -8,6 +8,10 @@
               <div>  
                 <li class="list-style">
                   <h3> Versão {{ version.version }} </h3>
+                  <p class="text-info lead">
+                    {% include version-date.html %}
+                    <!-- {{ version.date | date: "%a, %b %d, %y" }} -->
+                  </p>
                   <p>{{ version.description }}</p>
                 </li>
               </div>
