--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
     {% include head.html %}
     <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     {% include nav.html %}
     {% include header.html %}
-    {% include about.html %}
+    <!-- About Section -->
+    <section id="servicos" class="container content-section text-center">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    {{ content }}
+                </div>
+            </div>
+    </section>
     {% include download.html %}
     {% include contact.html %}
     {% include map.html %}
