--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,5 +14,6 @@
             {% if site.show-author %}
             <p id="text-version">{{ site.author }}</p>
             {% endif %}
+            {% include msgSacre.html %}
         </div>
     </footer>
