--- a/_includes/js.html
+++ b/_includes/js.html
@@ -12,3 +12,6 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="{{ "/js/grayscale.js" | prepend: site.baseurl }}"></script>
+
+   <!-- Custom Unna -->
+   <script src="{{ "/js/custom-unna.js" | prepend: site.baseurl }}"></script>
