--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
                 {% endif %}
             {% endfor %}           
         <div id="div-footer" class="container text-center">
-            <p class="text-copyright">Copyright &copy; 20{{ site.time | date: '%y' }} - {{ site.data.content-set.footer.body-set }} </p>
+            <a href="{{ site.url }}"><p class="text-copyright">Copyright &copy; 20{{ site.time | date: '%y' }} - {{ site.data.content-set.footer.body-set }} </p></a>
             {% include msgSacre.html %}
             {% if site.data.show.author %}
             <a id="text-version" href="{{ site.url }}/version_"><p class="text-version"> Versão {{ version }} </p></a>
