--- a/_layouts/view-posts.html
+++ b/_layouts/view-posts.html
@@ -1,3 +1,4 @@
+{%if site.data.show.posts %}
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
     {% include head.html %}
@@ -9,3 +10,4 @@
     {% include js.html %}
     </body>
 </html>
+{% endif %}
