--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="viewport" content="width=device-width">
+    {% if page.description %}
+    <meta name="description" content="{{ page.description | join: '. ' | escape }}">
+    {% else %}
     <meta name="description" content="{{ site.description }}">
+    {% endif %}
+    {% if page.keywords %}
+    <meta name="keywords" content="{{ page.keywords | join: ', ' | escape }}">
+    {% endif %}
+    {% if page.keywords %}
+    <meta name="author" content="{{ page.author | join: ', ' | escape }}">
+    {% endif %}
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
