--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
             <a id="text-version" href="{{ site.url }}/version_"><p class="text-version"> Versão {{ version }} </p></a>
             {% endif %}
             {% if site.data.show.author %}
-            <p id="text-author">{{ site.author }}</p>
+            <p id="text-author"> <span id="text-developed">developed by</span><a href="https://www.linkedin.com/in/emersonbatistaleite/"> {{ site.author }}</p></a>
             {% endif %} 
         </div>
     </footer>
