--- a/_includes/css/unna.css
+++ b/_includes/css/unna.css
@@ -28,8 +28,9 @@ footer {
     background-color: #059C00;    
     width: 100%;
     margin-top: 100px;
-    margin-bottom: 50px;
+    margin-bottom: 25px;
     padding-top: 30px;
+    padding-bottom: 25px;
     color: white;
 }
 
@@ -76,6 +77,7 @@ html {
 
 .none-text{
     text-transform: none;
+    margin-bottom: 15px;
 }
 
 .map-section{
@@ -85,6 +87,19 @@ html {
 .a-color-post{
     color: #000;
 }
+
+.text-date {
+    font-size: 18px;
+    color:#059C00;
+    font-style: italic;
+    margin-bottom: 15px;
+
+}
+
+/* li {
+    font-size: 20px;
+    
+} */
 
 
 h1,
@@ -343,7 +358,7 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 200px;
+        padding-top: 100px;
     }
 
     .download-section {
