--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,7 +1,7 @@
 <div id="post" class="container pt-3">
     <div class="row">
       <div class="col">
-        <p class="lead text-info">
+        <p class="text-date">Postado em 
           {% include page-date.html %}
         </p>
         <h1>{{ post.title }}</h1>
