--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,7 @@
     {% include nav.html %}
     {% include above-post.html %}
     {% include post.html %}
+    {% include erase.html %}
     {% include comments.html %}
     {% include footer.html %}
     {% include js.html %}
