--- a/_layouts/page404.html
+++ b/_layouts/page404.html
@@ -5,6 +5,7 @@
     {% include nav.html %}
     {% include above-post.html %}
     {% include page404.html %}
+    {% include erase.html %}
     {% include footer.html %}
     {% include js.html %}
     </body>
