--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,8 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>{{ site.data.content-set.contact.title }}</h2>
                 <p>{{ site.data.content-set.contact.body-set }}</p>
-                <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>
-                </p>
+                {% include form-contact.html %}
                 <ul class="list-inline banner-social-buttons">
                     {% for network in site.data.social %}
                     <li>
@@ -13,6 +12,7 @@
                     </li>
                     {% endfor %}
                 </ul>
+                <!-- <p><a href="mailto:{{ site.email }}">{{ site.email }}</a></p> -->
             </div>
         </div>
     </section>
