--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -1,3 +1,4 @@
+<div class="form-div">
 <form method="POST" action="https://formspree.io/mailing01@unna.eng.br"> 
     <div class="form-group">
         <label class="form-font" for="exampleFormControlInput2">nome completo</label>
@@ -15,3 +16,4 @@
         <button type="submit" class="btn btn-default btn-lg"> Enviar </button>
     </div>
 </form>
+</div>
