--- a/_includes/post.html
+++ b/_includes/post.html
@@ -7,6 +7,8 @@
         <h1>{{ post.title }}</h1>
         <article>
           {{ content }}
+          <p>Confira em:</p>
+          <p>Fonte: <a href="{{ page.fonte }}">{{ page.fonte }}</a></p>
         </article>
       </div>
     </div>
