--- a/_includes/post.html
+++ b/_includes/post.html
@@ -8,7 +8,7 @@
         <article>
           <p class="service-description">{{ content }}</p>
           {% if page.source  %}
-          <p>Confira em:</p>
+          <p>Confira o artigo completo em:</p>
           <p>Fonte: <a href="{{ page.source }}">{{ page.source }}</a></p>
           {% endif  %}
         </article>
