--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,13 +5,13 @@
                 <h2>{{ site.data.content-set.contact.title }}</h2>
                 <p>{{ site.data.content-set.contact.body-set }}</p>
                 {% include form-contact.html %}
-                <ul class="list-inline banner-social-buttons">
+                <!-- <ul class="list-inline banner-social-buttons">
                     {% for network in site.data.social %}
                     <li>
-                        <a href="{{ network.url }}" class="btn btn-default btn-lg {{ network.title }}"><i class="fab fa-{{ network.title }}"></i> <span class="network-name">{{ network.title }}</span></a>
+                        <a href="{{ network.url }}" class="btn btn-default btn-lg {{ network.title }}"><i class="fab fa-{{ network.title }}"></i> <span class="network-name">{{ network.name }}</span></a>
                     </li>
                     {% endfor %}
-                </ul>
+                </ul> -->
                 <!-- <p><a href="mailto:{{ site.email }}">{{ site.email }}</a></p> -->
             </div>
         </div>
