--- a/_includes/css/unna.css
+++ b/_includes/css/unna.css
@@ -393,12 +393,16 @@ a:focus {
 }
 
 .btn-default {
-    border: 1px solid {{ site.color.links }};
+    border: 0px solid {{ site.color.links }};
     color: {{ site.color.font-btn-color }};
     background-color:  {{ site.color.btn-bkg }}; /*default*/
 }
 
 .facebook{
+    background-color: #4267B2;
+}
+
+.facebook-messenger{
     background-color: #4267B2;
 }
 
@@ -422,8 +426,9 @@ a:focus {
     background-color: {{ site.color.links }};
 }
 
+
 ul.banner-social-buttons {
-    margin-top: 0;
+    margin-top: 20px;
 }
 
 ul.banner-social-buttons li {
