--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -13,7 +13,7 @@
       <textarea name="textarea" class="form-control" id="exampleFormControlTextarea1" rows="8" placeholder="Diga o que precisa :)"></textarea>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-default btn-lg"> Enviar </button>
+        <button type="submit" class="btn btn-submit btn-lg"> Enviar </button>
     </div>
 </form>
 </div>
