--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,9 +16,14 @@
         <p id="text-author"> <span id="text-developed">developed by</span><a href="https://www.linkedin.com/in/emersonbatistaleite/"> {{ site.author }}</p></a>
         {% endif %} 
         <ul class="list-inline banner-social-buttons margin-social">
-            {% for network in site.data.social %}
+<!--             {% for network in site.data.social %}
             <li>
                 <a href="{{ network.url }}" class="btn btn-default btn-lg {{ network.title }}"><i class="fab fa-{{ network.title }}"></i> <span class="network-name">{{ network.name }}</span></a>
+            </li>
+            {% endfor %} -->
+            {% for network in site.data.social %}
+            <li>
+                <a href="{{ network.url }}" class="btn btn-lg {{ network.title }}"><i class="fab fa-{{ network.title }}"></i> <span class="network-name">{{ network.name }}</span></a>
             </li>
             {% endfor %}
         </ul>
