--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>{{ site.data.content-set.contact.title }}</h2>
                 <p>{{ site.data.content-set.contact.body-set }}</p>
-                <p>Mande seu currículo para <a href = "mailto: curriculo@unna.eng.br">curriculo@unna.eng.br</a></p>
+                <p>Mande seu currículo para <a href = "mailto: rh@unna.eng.br">rh@unna.eng.br</a></p>
                 {% include form-contact.html %}
                 <!-- <ul class="list-inline banner-social-buttons">
                     {% for network in site.data.social %}
